# ChangeLog for media-sound/pragha
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> -pragha-0.7.1.1.ebuild,
  -pragha-0.7.4.ebuild:
  Removed cruft.

*pragha-0.8.5 (16 Feb 2011)

  16 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.5.ebuild:
  Bumped.

*pragha-0.8.4 (04 Jan 2011)

  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.4.ebuild:
  Bumped.

*pragha-0.8.3 (28 Nov 2010)

  28 Nov 2010; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.3.ebuild:
  Bumped.

*pragha-0.7.4 (01 May 2010)

  01 May 2010; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.7.4.ebuild:
  Bumped.

*pragha-0.7.1.1 (29 Jan 2010)

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.7.1.1.ebuild,
  +metadata.xml:
  Added ebuild from bgo #295323.
