@@ -1,8 +1,10 @@
 DIST pragha-0.8.3.tar.bz2 486214 RMD160 3a7e06d2dcd372b76a4fa752a87a6ce96112feba SHA1 5b7e378cccb4507f17858c4cf38b8a332fbfe0b6 SHA256 fce5c0cb012f5ef928198aed227274d124202073fa0c58926354ac879e8039eb
 DIST pragha-0.8.4.tar.bz2 488434 RMD160 ad860e3205b751c10044130f30af447ebdd24878 SHA1 b4d5289998db2c34647fc30c0b62c6a7e984c052 SHA256 c6bbcd413c45263e9fb23738757502f1846dfdac4c497738205c61294d5e1e8e
 DIST pragha-0.8.5.tar.bz2 494375 RMD160 52377652e5a2be70b9898a7f03a8a83d8771bf5a SHA1 cb742c5222d85098a3faf4806fbed1569d34c787 SHA256 a4fef7cf5410d341895a09102b648efb463357632cbc4ce465cc303aa0824436
+DIST pragha-0.8.6.tar.bz2 503841 RMD160 466f06fc011a48479d7cb8fe20657c4d4fd285aa SHA1 5fa629b58f1482c36b400a6a563d46e044c590b7 SHA256 05e686a0a7e0a81d1b041d7bfc2f4947e462451295292a80df37f3151bf48c3b
 EBUILD pragha-0.8.3.ebuild 687 RMD160 a122032f7cb13fd4478b6dece21569a8e1e0fc0c SHA1 bd4ad891cac1eae181b3ea9d51b180700c25869a SHA256 4ad7512762f3f56cdfd72f8e924025e9254807f01e8f79f788770cf8bf85a957
 EBUILD pragha-0.8.4.ebuild 687 RMD160 a122032f7cb13fd4478b6dece21569a8e1e0fc0c SHA1 bd4ad891cac1eae181b3ea9d51b180700c25869a SHA256 4ad7512762f3f56cdfd72f8e924025e9254807f01e8f79f788770cf8bf85a957
 EBUILD pragha-0.8.5.ebuild 687 RMD160 a122032f7cb13fd4478b6dece21569a8e1e0fc0c SHA1 bd4ad891cac1eae181b3ea9d51b180700c25869a SHA256 4ad7512762f3f56cdfd72f8e924025e9254807f01e8f79f788770cf8bf85a957
-MISC ChangeLog 833 RMD160 51552470977256c07f36d9f986ad2594fb8a6c04 SHA1 4262a2a59afcaccf2d8c1c345e1d05b60a0bc736 SHA256 28647095e2036fd4ff353b1069526d7f753e0c1616d352f552361cd7eb27210b
+EBUILD pragha-0.8.6.ebuild 687 RMD160 a122032f7cb13fd4478b6dece21569a8e1e0fc0c SHA1 bd4ad891cac1eae181b3ea9d51b180700c25869a SHA256 4ad7512762f3f56cdfd72f8e924025e9254807f01e8f79f788770cf8bf85a957
+MISC ChangeLog 944 RMD160 901fcf136086abfb99428406e90f69bf9748aeb0 SHA1 833d90b81093b1e41e06fcc7bad5c52947c9b1b4 SHA256 872b357dba561e5aea33273e75c250e5ab8efc10fb11c8641a16c7b7f4641272
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
