@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pragha-0.8.6 (01 Apr 2011)
+
+  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.6.ebuild:
+  Bumped.
+
   01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> -pragha-0.7.1.1.ebuild,
   -pragha-0.7.4.ebuild:
   Removed cruft.
